--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div id="wrapper">
         <div class="flag__birthday">
-            <img src="./images/1.png" alt="" width="350" class="flag__left">
-            <img src="./images/1.png" alt="" width="350" class="flag__right">
+            <img src="1.png" alt="" width="350" class="flag__left">
+            <img src="1.png" alt="" width="350" class="flag__right">
         </div>
         <div class="content">
             <div class="left">
@@ -37,7 +37,7 @@
                         <span style="--t: 6.4s;">y</span>
                     </h1>
                     <div class="hat">
-                        <img src="./images/hat.png" alt="Hat" width="130">
+                        <img src="hat.png" alt="Hat" width="130">
                     </div>
                 </div>
                 <div class="date__of__birth">
@@ -53,7 +53,7 @@
             <div class="right">
                 <div class="box__account">
                     <div class="image">
-                        <img src="./images/Murshidivyaa.jpg" alt="Murshidivya">
+                        <img src="murshidivyaa.jpg" alt="Murshidivya">
                     </div>
                     <div class="name">
                         <i class="fa-solid fa-heart"></i>
@@ -61,10 +61,10 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
                     <div class="balloon_one">
-                        <img src="./images/balloon1.png" alt="Balloon 1" width="100">
+                        <img src="balloon1.png" alt="Balloon 1" width="100">
                     </div>
                     <div class="balloon_two">
-                        <img src="./images/balloon2.png" alt="Balloon 2" width="100">
+                        <img src="balloon2.png" alt="Balloon 2" width="100">
                     </div>
                 </div>
                 <div class="cricle">
@@ -96,11 +96,11 @@
         <div class="decorate_star star3" style="--t: 15.4s;"></div>
         <div class="decorate_star star4" style="--t: 15.6s;"></div>
         <div class="decorate_star star5" style="--t: 15.8s;"></div>
-        <div class="decorate_flower--one" style="--t: 15s;"><img src="./images/decorate_flower.png" alt="" width="20"></div>
-        <div class="decorate_flower--two" style="--t: 15.3s;"><img src="./images/decorate_flower.png" alt="" width="20"></div>
-        <div class="decorate_flower--three" style="--t: 15.6s;"><img src="./images/decorate_flower.png" alt="" width="20"></div>
-        <div class="decorate_bottom"><img src="./images/decorate.png" alt="" width="100"></div>
-        <div class="smiley__icon"><img src="./images/smiley_icon.png" alt="" width="100"></div>
+        <div class="decorate_flower--one" style="--t: 15s;"><img src="decorate_flower.png" alt="" width="20"></div>
+        <div class="decorate_flower--two" style="--t: 15.3s;"><img src="decorate_flower.png" alt="" width="20"></div>
+        <div class="decorate_flower--three" style="--t: 15.6s;"><img src="decorate_flower.png" alt="" width="20"></div>
+        <div class="decorate_bottom"><img src="decorate.png" alt="" width="100"></div>
+        <div class="smiley__icon"><img src="smiley_icon.png" alt="" width="100"></div>
 
         <!-- Letter Box -->
         <div class="box__letter">
@@ -110,14 +110,14 @@
                     <div class="content__letter">
                         <div class="left">
                             <img id="heart__letter" src="https://media.giphy.com/media/YKUvclrGYmDKXwtphf/giphy.gif" alt="Heart">
-                            <img class="heart heart_1" style="--t: 0.2s" src="./images/heart.png" width="20" alt="">
-                            <img class="heart heart_2" style="--t: 0.4s" src="./images/heart.png" width="20" alt="">
-                            <img class="heart heart_3" style="--t: 0.6s" src="./images/heart.png" width="20" alt="">
-                            <img class="heart heart_4" style="--t: 0.8s" src="./images/heart.png" width="20" alt="">
+                            <img class="heart heart_1" style="--t: 0.2s" src="heart.png" width="20" alt="">
+                            <img class="heart heart_2" style="--t: 0.4s" src="heart.png" width="20" alt="">
+                            <img class="heart heart_3" style="--t: 0.6s" src="heart.png" width="20" alt="">
+                            <img class="heart heart_4" style="--t: 0.8s" src="heart.png" width="20" alt="">
                         </div>
                         <div class="right">
                             <div class="text__letter"><p></p></div>
-                            <img id="mewmew" src="./images/mewmew.gif" width="80" alt="">
+                            <img id="mewmew" src="mewmew.gif" width="80" alt="">
                         </div>
                     </div>
                 </div>
