--- a/index.html
+++ b/index.html
@@ -1,217 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="Happy Birthday Website 2.0 | Aoudumber Bade">
-    <meta name="github" content="https://github.com/Aoudumber-Bade">
-    <title>Happy Birthday | Murshidivya</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous" />
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="title" content="Happy Birthday Website 2.0 | Murshidivya"/>
+  <title>Happy Birthday | Murshidivya</title>
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 <body>
-    <div id="wrapper">
-        <div class="flag__birthday">
-            <img src="1.png" alt="" width="350" class="flag__left">
-            <img src="1.png" alt="" width="350" class="flag__right">
-        </div>
-        <div class="content">
-            <div class="left">
-                <div class="title">
-                    <h1 class="happy">
-                        <span style="--t: 4s;">H</span>
-                        <span style="--t: 4.2s;">a</span>
-                        <span style="--t: 4.4s;">p</span>
-                        <span style="--t: 4.6s;">p</span>
-                        <span style="--t: 4.8s;">y</span>
-                    </h1>
-                    <h1 class="birthday">
-                        <span style="--t: 5s;">B</span>
-                        <span style="--t: 5.2s;">i</span>
-                        <span style="--t: 5.4s;">r</span>
-                        <span style="--t: 5.6s;">t</span>
-                        <span style="--t: 5.8s;">h</span>
-                        <span style="--t: 6s;">d</span>
-                        <span style="--t: 6.2s;">a</span>
-                        <span style="--t: 6.4s;">y</span>
-                    </h1>
-                    <div class="hat">
-                        <img src="hat.png" alt="Hat" width="130">
-                    </div>
-                </div>
-                <div class="date__of__birth">
-                    <span></span>
-                </div>
-                <div class="btn">
-                    <button id="btn__letter">
-                       Click Here
-                        <i class="fa-regular fa-envelope"></i>
-                    </button>
-                </div>
-            </div>
-            <div class="right">
-                <div class="box__account">
-                    <div class="image">
-                        <img src="murshidivyaa.jpg" alt="Murshidivya">
-                    </div>
-                    <div class="name">
-                        <i class="fa-solid fa-heart"></i>
-                        <span>I Love You</span>
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
-                    <div class="balloon_one">
-                        <img src="balloon1.png" alt="Balloon 1" width="100">
-                    </div>
-                    <div class="balloon_two">
-                        <img src="balloon2.png" alt="Balloon 2" width="100">
-                    </div>
-                </div>
-                <div class="cricle">
-                    <div class="text__cricle">
-                        <span style="--i: 1;">h</span>
-                        <span style="--i: 2;">a</span>
-                        <span style="--i: 3;">p</span>
-                        <span style="--i: 4;">p</span>
-                        <span style="--i: 5;">y</span>
-                        <span style="--i: 6;">-</span>
-                        <span style="--i: 7;">b</span>
-                        <span style="--i: 8;">i</span>
-                        <span style="--i: 9;">r</span>
-                        <span style="--i: 10;">t</span>
-                        <span style="--i: 11;">h</span>
-                        <span style="--i: 12;">d</span>
-                        <span style="--i: 13;">a</span>
-                        <span style="--i: 14;">y</span>
-                        <span style="--i: 15;">-</span>
-                    </div>
-                    <i class="fa-solid fa-heart"></i>
-                </div>
-            </div>
-        </div>
-
-        <!-- Decorations -->
-        <div class="decorate_star star1" style="--t: 15s;"></div>
-        <div class="decorate_star star2" style="--t: 15.2s;"></div>
-        <div class="decorate_star star3" style="--t: 15.4s;"></div>
-        <div class="decorate_star star4" style="--t: 15.6s;"></div>
-        <div class="decorate_star star5" style="--t: 15.8s;"></div>
-        <div class="decorate_flower--one" style="--t: 15s;"><img src="decorate_flower.png" alt="" width="20"></div>
-        <div class="decorate_flower--two" style="--t: 15.3s;"><img src="decorate_flower.png" alt="" width="20"></div>
-        <div class="decorate_flower--three" style="--t: 15.6s;"><img src="decorate_flower.png" alt="" width="20"></div>
-        <div class="decorate_bottom"><img src="decorate.png" alt="" width="100"></div>
-        <div class="smiley__icon"><img src="smiley_icon.png" alt="" width="100"></div>
-
-        <!-- Letter Box -->
-        <div class="box__letter">
-            <div class="letter__border">
-                <div class="letter">
-                    <div class="title__letter"></div>
-                    <div class="content__letter">
-                        <div class="left">
-                            <img id="heart__letter" src="https://media.giphy.com/media/YKUvclrGYmDKXwtphf/giphy.gif" alt="Heart">
-                            <img class="heart heart_1" style="--t: 0.2s" src="heart.png" width="20" alt="">
-                            <img class="heart heart_2" style="--t: 0.4s" src="heart.png" width="20" alt="">
-                            <img class="heart heart_3" style="--t: 0.6s" src="heart.png" width="20" alt="">
-                            <img class="heart heart_4" style="--t: 0.8s" src="heart.png" width="20" alt="">
-                        </div>
-                        <div class="right">
-                            <div class="text__letter"><p></p></div>
-                            <img id="mewmew" src="mewmew.gif" width="80" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="close"><i class="fa-solid fa-xmark"></i></div>
-            </div>
-        </div>
+  <div id="wrapper">
+    <!-- Top Flags -->
+    <div class="flag__birthday">
+      <img src="1.png" alt="" width="350" class="flag__left" />
+      <img src="1.png" alt="" width="350" class="flag__right" />
     </div>
 
-    <script>
-        let datetxt = "Bubu ji";
-        let datatxtletter = "My love. You are a very special girl. I always silently thank you for coming into my life. Today, I wish you all the best, lots of health, and lots of joy. I always hope we will celebrate many more birthdays like this together. Happy birthday to You Bubu .\uD83D\uDC95";
-        let titleLetter = "To you";
-        let charArrDate = datetxt.split('');
-        let charArrDateLetter = datatxtletter.split('');
-        let charArrTitle = titleLetter.split('');
-        let currentIndex = 0;
-        let currentIndexLetter = 0;
-        let currentIndexTitle = 0;
-        let date__of__birth = document.querySelector(".date__of__birth span");
-        let text__letter = document.querySelector(".text__letter p");
+    <!-- Content -->
+    <div class="content">
+      <div class="left">
+        <div class="title">
+          <h1 class="happy">
+            <span style="--t: 4s;">H</span><span style="--t: 4.2s;">a</span>
+            <span style="--t: 4.4s;">p</span><span style="--t: 4.6s;">p</span>
+            <span style="--t: 4.8s;">y</span>
+          </h1>
+          <h1 class="birthday">
+            <span style="--t: 5s;">B</span><span style="--t: 5.2s;">i</span>
+            <span style="--t: 5.4s;">r</span><span style="--t: 5.6s;">t</span>
+            <span style="--t: 5.8s;">h</span><span style="--t: 6s;">d</span>
+            <span style="--t: 6.2s;">a</span><span style="--t: 6.4s;">y</span>
+          </h1>
+          <div class="hat"><img src="hat.png" alt="Hat" width="130" /></div>
+        </div>
 
-        setTimeout(() => {
-            let timeDatetxt = setInterval(() => {
-                if (currentIndex < charArrDate.length) {
-                    date__of__birth.textContent += charArrDate[currentIndex];
-                    currentIndex++;
-                } else {
-                    let i = document.createElement("i");
-                    i.className = "fa-solid fa-star";
-                    document.querySelector(".date__of__birth").prepend(i);
-                    document.querySelector(".date__of__birth").appendChild(i.cloneNode(true));
-                    clearInterval(timeDatetxt);
-                }
-            }, 100);
-        }, 12000);
+        <div class="date__of__birth"><span></span></div>
+        <div class="btn">
+          <button id="btn__letter">Click Here <i class="fa-regular fa-envelope"></i></button>
+        </div>
+      </div>
 
-        let intervalContent, intervalTitle;
+      <div class="right">
+        <div class="box__account">
+          <div class="image"><img src="murshidivyaa.jpg" alt="Murshidivya" /></div>
+          <div class="name"><i class="fa-solid fa-heart"></i><span>I Love You</span><i class="fa-solid fa-heart"></i></div>
+          <div class="balloon_one"><img src="balloon1.png" alt="Balloon 1" width="100" /></div>
+          <div class="balloon_two"><img src="balloon2.png" alt="Balloon 2" width="100" /></div>
+        </div>
 
-        $("#btn__letter").on("click", function () {
-            $(".box__letter").slideDown();
-            setTimeout(() => {
-                $(".letter__border").slideDown();
-            }, 1000);
-            setTimeout(() => {
-                intervalTitle = setInterval(() => {
-                    if (currentIndexTitle < charArrTitle.length) {
-                        document.querySelector(".title__letter").textContent += charArrTitle[currentIndexTitle];
-                        let i = document.createElement("i");
-                        i.className = "fa-solid fa-heart";
-                        document.querySelector(".title__letter").appendChild(i);
-                        currentIndexTitle++;
-                    } else {
-                        clearInterval(intervalTitle);
-                    }
-                }, 100);
-            }, 2000);
+        <div class="cricle">
+          <div class="text__cricle">
+            <span style="--i: 1;">h</span><span style="--i: 2;">a</span>
+            <span style="--i: 3;">p</span><span style="--i: 4;">p</span>
+            <span style="--i: 5;">y</span><span style="--i: 6;">-</span>
+            <span style="--i: 7;">b</span><span style="--i: 8;">i</span>
+            <span style="--i: 9;">r</span><span style="--i: 10;">t</span>
+            <span style="--i: 11;">h</span><span style="--i: 12;">d</span>
+            <span style="--i: 13;">a</span><span style="--i: 14;">y</span>
+          </div>
+          <i class="fa-solid fa-heart"></i>
+        </div>
+      </div>
+    </div>
 
-            setTimeout(() => {
-                document.querySelector("#heart__letter").classList.add("animationOp");
-                document.querySelector(".love__img").classList.add("animationOp");
-                document.querySelector("#mewmew").classList.add("animationOp");
-            }, 2800);
+    <!-- Decorations -->
+    <div class="decorate_star star1" style="--t: 15s;"></div>
+    <div class="decorate_star star2" style="--t: 15.2s;"></div>
+    <div class="decorate_star star3" style="--t: 15.4s;"></div>
+    <div class="decorate_star star4" style="--t: 15.6s;"></div>
+    <div class="decorate_star star5" style="--t: 15.8s;"></div>
+    <div class="decorate_flower--one" style="--t: 15s;"><img src="decorate_flower.png" alt="" width="20"/></div>
+    <div class="decorate_flower--two" style="--t: 15.3s;"><img src="decorate_flower.png" alt="" width="20"/></div>
+    <div class="decorate_flower--three" style="--t: 15.6s;"><img src="decorate_flower.png" alt="" width="20"/></div>
+    <div class="decorate_bottom"><img src="decorate.png" alt="" width="100"/></div>
+    <div class="smiley__icon"><img src="smiley_icon.png" alt="" width="100"/></div>
 
-            setTimeout(() => {
-                document.querySelectorAll(".heart").forEach(item => {
-                    item.classList.add("animation");
-                });
-            }, 3500);
+    <!-- Letter Box -->
+    <div class="box__letter" style="display: none;">
+      <div class="letter__border">
+        <div class="letter">
+          <div class="title__letter"></div>
+          <div class="content__letter">
+            <div class="left">
+              <img id="heart__letter" src="https://media.giphy.com/media/YKUvclrGYmDKXwtphf/giphy.gif" alt="Heart" />
+              <img class="heart heart_1" style="--t: 0.2s" src="heart.png" width="20" alt=""/>
+              <img class="heart heart_2" style="--t: 0.4s" src="heart.png" width="20" alt=""/>
+              <img class="heart heart_3" style="--t: 0.6s" src="heart.png" width="20" alt=""/>
+              <img class="heart heart_4" style="--t: 0.8s" src="heart.png" width="20" alt=""/>
+            </div>
+            <div class="right">
+              <div class="text__letter"><p></p></div>
+              <img class="love__img" src="mewmew.gif" width="80" alt="" style="opacity: 0;" />
+              <img id="mewmew" src="mewmew.gif" width="80" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="close"><i class="fa-solid fa-xmark"></i></div>
+      </div>
+    </div>
+  </div>
 
-            setTimeout(() => {
-                intervalContent = setInterval(() => {
-                    if (currentIndexLetter < charArrDateLetter.length) {
-                        text__letter.textContent += charArrDateLetter[currentIndexLetter];
-                        currentIndexLetter++;
-                    } else {
-                        clearInterval(intervalContent);
-                    }
-                }, 50);
-            }, 6000);
+  <!-- Script -->
+  <script>
+    let datetxt = "Bubu ji";
+    let datatxtletter = "My love. You are a very special girl. I always silently thank you for coming into my life. Today, I wish you all the best, lots of health, and lots of joy. I always hope we will celebrate many more birthdays like this together. Happy birthday to You Bubu 💕";
+    let titleLetter = "To you";
+    let charArrDate = datetxt.split('');
+    let charArrDateLetter = datatxtletter.split('');
+    let charArrTitle = titleLetter.split('');
+    let currentIndex = 0, currentIndexLetter = 0, currentIndexTitle = 0;
+    let date__of__birth = document.querySelector(".date__of__birth span");
+    let text__letter = document.querySelector(".text__letter p");
+    let intervalContent, intervalTitle;
+
+    setTimeout(() => {
+      let timeDatetxt = setInterval(() => {
+        if (currentIndex < charArrDate.length) {
+          date__of__birth.textContent += charArrDate[currentIndex++];
+        } else {
+          let i = document.createElement("i");
+          i.className = "fa-solid fa-star";
+          document.querySelector(".date__of__birth").prepend(i);
+          document.querySelector(".date__of__birth").appendChild(i.cloneNode(true));
+          clearInterval(timeDatetxt);
+        }
+      }, 100);
+    }, 12000);
+
+    $("#btn__letter").on("click", function () {
+      $(".box__letter").fadeIn();
+      $(".letter__border").hide().slideDown();
+
+      setTimeout(() => {
+        intervalTitle = setInterval(() => {
+          if (currentIndexTitle < charArrTitle.length) {
+            document.querySelector(".title__letter").textContent += charArrTitle[currentIndexTitle++];
+            let i = document.createElement("i");
+            i.className = "fa-solid fa-heart";
+            document.querySelector(".title__letter").appendChild(i);
+          } else {
+            clearInterval(intervalTitle);
+          }
+        }, 100);
+      }, 1000);
+
+      setTimeout(() => {
+        document.querySelector("#heart__letter").classList.add("animationOp");
+        document.querySelector(".love__img").classList.add("animationOp");
+        document.querySelector("#mewmew").classList.add("animationOp");
+      }, 2000);
+
+      setTimeout(() => {
+        document.querySelectorAll(".heart").forEach(item => {
+          item.classList.add("animation");
         });
+      }, 2500);
 
-        $(".close").on("click", function () {
+      setTimeout(() => {
+        intervalContent = setInterval(() => {
+          if (currentIndexLetter < charArrDateLetter.length) {
+            text__letter.textContent += charArrDateLetter[currentIndexLetter++];
+          } else {
             clearInterval(intervalContent);
-            document.querySelector(".title__letter").textContent = "";
-            text__letter.textContent = "";
-            currentIndexLetter = 0;
-            currentIndexTitle = 0;
-            document.querySelector("#heart__letter").classList.remove("animationOp");
-            document.querySelector(".love__img").classList.remove("animationOp");
-            document.querySelector("#mewmew").classList.remove("animationOp");
-            document.querySelectorAll(".heart").forEach(item => item.classList.remove("animation"));
-            $(".box__letter").slideUp();
-            $(".letter__border").slideUp();
-        });
-    </script>
+          }
+        }, 50);
+      }, 3000);
+    });
+
+    function closeCard() {
+      clearInterval(intervalContent);
+      document.querySelector(".title__letter").textContent = "";
+      text__letter.textContent = "";
+      currentIndexLetter = 0;
+      currentIndexTitle = 0;
+
+      document.querySelector("#heart__letter").classList.remove("animationOp");
+      document.querySelector(".love__img").classList.remove("animationOp");
+      document.querySelector("#mewmew").classList.remove("animationOp");
+      document.querySelectorAll(".heart").forEach(item => item.classList.remove("animation"));
+
+      $(".letter__border").slideUp(500, () => {
+        $(".box__letter").fadeOut();
+      });
+    }
+
+    $(".close").on("click", closeCard);
+    $(".box__letter").on("click", function (e) {
+      if ($(e.target).is(".box__letter")) closeCard();
+    });
+  </script>
 </body>
 </html>
